--- a/index.html
+++ b/index.html
@@ -1,65 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Ukraine</title>
-    <h1>Travel agency "Amazing tour</h1>
+    <h1><b>Travel agency "Amazing tour"</b></h1>
     <link class="theme-link" rel="stylesheet" href="https://bootswatch.com/4/solar/bootstrap.min.css">    
-    <link rel="stylesheet" href="css/index.css">
-</head>
-<body>
-
-     <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Our tours</a>
-           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span>
+    <link rel="stylesheet" href="css/index.css"> 
+  </head>
+  <body>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+           <a class="navbar-brand" href="#"><h3><b>AMAZING TOUR</b></h3></a>
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" 
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
            </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#tours">Tours</a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link" href="#contacts">Contacts</a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link switch-theme" href="#">Switch Theme</a>
-            </li>
-        </ul>
-    </div>
+        <div class="collapse navbar-collapse" id="navbarText">
+           <ul class="navbar-nav mr-auto">
+               <li class="nav-item active">
+                  <a class="nav-link" href="#aboutUs">ABOUT US<!-- <span class="sr-only">(current)--> </span></a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#ourTours">OUR TOURS</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#contacts">CONTACTS</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link switch-theme" href="#">Switch Theme</a>
+               </li>
+           </ul>
+                  <a class="navbar-brand" href="#"><h3><b>CHOOSE NOW!</b></h3></a>
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" 
+           aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+             <span class="navbar-toggler-icon"></span>
+           </button>
+        </div>
         </nav>
-       <div id="carouselTours" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/two.jpg" class="d-block w-100" alt="two">
-    </div>
-    <div class="carousel-item">
-      <img src="img/one.jpg" class="d-block w-100" alt="one">
-    </div>
-    <div class="carousel-item">
-      <img src="img/three.jpg" class="d-block w-100" alt="three">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselTours" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselTours" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+     <div class="card bg-dark text-white">
+             <img src="img/pngnaturecut.png" class="card-img" alt="pngnature">
+        <div class="card-img-overlay">
+             <h5 class="card-title">TRAVEL AGENCY "AMAZING TOUR"</h5>
+             <p class="card-text"><i>TRAVEL</i><br> <i>ENJOY</i><br> <i>OPEN NEW</i><br> <i>HAVE ADVICE</i><br> <i>SHARE</i>
+             </p>
+             <h5 class="card-title">Your holiday trip will amazing!</h5>
+        </div>
+     </div>
      </header>
-   <main class="container">
-       <h2 id="tours">Tours</h2>
+          <section id="aboutUs">
+                <div>
+                    <h2>About us</h2>
+                    <p id="aboutUs">The world is changing and improving every day, 
+                    we are sure that everyone today dreams of the health of relatives, 
+                    a happy family, a beautiful home, a beautiful and beloved job, 
+                    and a wonderful vacation that would be remembered for a lifetime...<br>
+                    Every year the services of our travel company are used by a large number 
+                    of tourists from all regions of Ukraine. Our main goal is to make your 
+                    vacation quality, safe, unforgettable and the best. And we guarantee 
+                    you new pleasant impressions from new offers.<br>
+                    We will offer the best options in sightseeing tours and weekend tours, 
+                    we also organize tours for corporate clients and have many routes for 
+                    schoolchildren!<br>
+                    Contact us and you will be convinced of it.<br> 
+                    At <a href="https://kraina-ua.com/">Choose your tour</a>
+                    you will find a large selection of regular tours, and for each season 
+                    Contact us and you will be convinced of it.<br> 
+                    we develop and offer exciting new trips around Ukraine.
+                    Entrust us with the organization of your vacation, and we will make every 
+                    effort to make your best hopes come true! Travel company "Amazing tour" 
+                    is always at your service!</p>
+                </div>
+            </section>
+
+
+    <main class="container">
+       <h2 id="ourTours">Our tours</h2>
        <div class="row">
            <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
-                <img src="img/askanianova.jpg" class="card-img-top" alt="askanianova">
+                <img src="img/askanianova.jpg" class="card-img-top" alt="Field with zebras in Askania-Nova Biosphere Reserve">
                 <div class="card-body">
                 <h5 class="card-title">Askania-Nova Biosphere Reserve</h5>
                 <p class="card-text">This reserve on the territory of Ukraine is unique. 
@@ -99,14 +118,36 @@
                <i>Where: in the Volyn region.</i>
                 <a href="#" class="btn btn-primary">Book now</a>
                 </div>
+         </article>       
+         <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                <img src="img/karpaty.jpg" class="card-img-top" alt="Carpathian mountain river">
+                <div class="card-body">
+                <h5 class="card-title">Carpathian National Nature Park</h5>
+                <p class="card-text">The Carpathian National Park is not only an 
+                incredible nature with lakes, unique cedar pines, waterfalls and rocks. 
+                It is a concentration of ancient archeological monuments, as well as 
+                monuments of wooden folk architecture of the XVI-XIX centuries.</p>
+                 <i>Where: Ivano-Frankivsk region, Yaremche, Hutsul region.</i>
+                <a href="#" class="btn btn-primary">Book now</a>
+                </div>
          </article>
        </div>
   </main>
   <footer class="container">
-  <h2 id="contacts">Contacts us</h2>
+  <h2 id="contacts">Contacts us:</h2>
+
+    <div class="container">
+         <form action="https://formspree.io/f/xdopzwew" method="POST">
+         <label>Your name:<textarea name="name"></textarea></label><br>
+         <label>Your message:<textarea name="message"></textarea></label><br>
+         <label>Phone Number:<textarea name="number"></textarea></label><br>
+         <label>Your e-mail:<input type="text"></label>
+         <button type="submit">Send</button>
+         </form>  
+    </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="js/index.js"></script>
-</body>
+  </body>
 </html>
