--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Ukraine</title>
-    <h1><b>Travel agency "Amazing tour"</b></h1>
+    <h2><i>TRAVEL</i> <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill" 
+     fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" 
+     d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/></svg> <i>ENJOY</i> 
+     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" 
+     xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 
+     2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 
+     5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 
+     15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 
+     23.333 4.867 8 15z"/></svg> <i>OPEN NEW</i> <svg width="1em" height="1em" viewBox="0 0 16 16" 
+     class="bi bi-heart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" 
+     d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/></svg> <i>HAVE ADVICE</i></h2>
     <link class="theme-link" rel="stylesheet" href="https://bootswatch.com/4/solar/bootstrap.min.css">    
     <link rel="stylesheet" href="css/index.css"> 
   </head>
   <body>
     <header class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-           <a class="navbar-brand" href="#"><h3><b>AMAZING TOUR</b></h3></a>
+           <a class="navbar-brand" href="#"><h3><i>BOOKING TODAY</i></h3></a>
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" 
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -19,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
            <ul class="navbar-nav mr-auto">
                <li class="nav-item active">
-                  <a class="nav-link" href="#aboutUs">ABOUT US<!-- <span class="sr-only">(current)--> </span></a>
+                  <a class="nav-link" href="#aboutUs">ABOUT US<!-- <span class="sr-only">(current)</span>--></a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="#ourTours">OUR TOURS</a>
@@ -31,7 +41,7 @@
                   <a class="nav-link switch-theme" href="#">Switch Theme</a>
                </li>
            </ul>
-                  <a class="navbar-brand" href="#"><h3><b>CHOOSE NOW!</b></h3></a>
+                  <a class="navbar-brand" href="#"><h3><i>REST TOMORROW</i></h3></a>
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" 
            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
@@ -41,17 +51,23 @@
      <div class="card bg-dark text-white">
              <img src="img/pngnaturecut.png" class="card-img" alt="pngnature">
         <div class="card-img-overlay">
-             <h5 class="card-title">TRAVEL AGENCY "AMAZING TOUR"</h5>
-             <p class="card-text"><i>TRAVEL</i><br> <i>ENJOY</i><br> <i>OPEN NEW</i><br> <i>HAVE ADVICE</i><br> <i>SHARE</i>
+             <h1 class="card-title"><i><b>TRAVEL AGENCY "AMAZING TOUR"</b></i></h1>
+             <p class="card-text">
              </p>
-             <h5 class="card-title">Your holiday trip will amazing!</h5>
+             <h3 class="card-title"><svg width="1em" height="1em" viewBox="0 0 16 16" 
+             class="bi bi-heart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+             <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 
+             3.562-3.248 8 1.314z"/></svg> created for you <svg width="1em" height="1em" viewBox="0 0 16 16" 
+             class="bi bi-heart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+             <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 
+             8 1.314z"/></svg></h3>
         </div>
      </div>
      </header>
           <section id="aboutUs">
                 <div>
                     <h2>About us</h2>
-                    <p id="aboutUs">The world is changing and improving every day, 
+                    <p id="textAboutUs">The world is changing and improving every day, 
                     we are sure that everyone today dreams of the health of relatives, 
                     a happy family, a beautiful home, a beautiful and beloved job, 
                     and a wonderful vacation that would be remembered for a lifetime...<br>
@@ -80,54 +96,54 @@
            <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
                 <img src="img/askanianova.jpg" class="card-img-top" alt="Field with zebras in Askania-Nova Biosphere Reserve">
                 <div class="card-body">
-                <h5 class="card-title">Askania-Nova Biosphere Reserve</h5>
+                <h3 class="card-title">Askania-Nova Biosphere Reserve</h3>
                 <p class="card-text">This reserve on the territory of Ukraine is unique. 
                  For every visitor Askania-Nova offers the opportunity 
                  to see not only the arboretum and zoo, but also the
                  virgin steppe. He retained his original inviolability.
-                 Here you can see the animals in their natural guise.</p>
+                 Here you can see the animals in their natural guise.<br>
                  <i>Where: Kherson region, Chaplinsky district,
-                  Askania-Nova township.</i>
+                  Askania-Nova township.</i></p>
                 <a href="#" class="btn btn-primary">Book now</a>
                 </div>
          </article>
          <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
                 <img src="img/sunevyr.jpg" class="card-img-top" alt="Sunevyr lake">
                 <div class="card-body">
-                <h5 class="card-title">Synevyr National Nature Park</h5>
+                <h3 class="card-title">Synevyr National Nature Park</h3>
                 <p class="card-text">Synevyr is a park of incredible beauty. There is 
                  everything: mountains, forest, lake and swamps.
                  Once upon a time, this park was a seabed, and now
                  everyone can walk through it, breathe fresh air and
                  reunite with nature. The only "Forest and Rafting Museum" 
-                 in Europe is located in the park..</i>
-                 <i>Where: Transcarpathian region, Mizhhirya district.</i>
+                 in Europe is located in the park.<br>
+                 <i>Where: Transcarpathian region, Mizhhirya district.</i></p>
                 <a href="#" class="btn btn-primary">Book now</a>
                 </div>
          </article>
          <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
                 <img src="img/shatck.jpg" class="card-img-top" alt="lake Shatck">
                 <div class="card-body">
-                <h5 class="card-title">Shatsky National Nature Park</h5>
+                <h3 class="card-title">Shatsky National Nature Park</h3>
                 <p class="card-text">Shatsky National Nature Park is exactly the place 
                where you can relax not only body but also soul. 
                Incredible landscapes will amaze even those people who 
                do not love nature. The eco-system of lake-swamp-forest 
                complexes in this park is considered to be the largest 
-               in Europe.</p>
-               <i>Where: in the Volyn region.</i>
+               in Europe.<br>
+               <i>Where: in the Volyn region.</i></p>
                 <a href="#" class="btn btn-primary">Book now</a>
                 </div>
          </article>       
          <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
                 <img src="img/karpaty.jpg" class="card-img-top" alt="Carpathian mountain river">
                 <div class="card-body">
-                <h5 class="card-title">Carpathian National Nature Park</h5>
+                <h3 class="card-title">Carpathian National Nature Park</h3>
                 <p class="card-text">The Carpathian National Park is not only an 
                 incredible nature with lakes, unique cedar pines, waterfalls and rocks. 
                 It is a concentration of ancient archeological monuments, as well as 
-                monuments of wooden folk architecture of the XVI-XIX centuries.</p>
-                 <i>Where: Ivano-Frankivsk region, Yaremche, Hutsul region.</i>
+                monuments of wooden folk architecture of the XVI-XIX centuries.<br>
+                 <i>Where: Ivano-Frankivsk region, Yaremche, Hutsul region.</i></p>
                 <a href="#" class="btn btn-primary">Book now</a>
                 </div>
          </article>
