--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Ukraine</title>
-    <h2><i>TRAVEL</i> <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill" 
+    <h2><i>TRAVEL</i>  <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill" 
      fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" 
-     d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/></svg> <i>ENJOY</i> 
+     d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/></svg>  <i>HAVE ADVICE</i> 
      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" 
      xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 
      2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 
      5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 
      15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 
-     23.333 4.867 8 15z"/></svg> <i>OPEN NEW</i> <svg width="1em" height="1em" viewBox="0 0 16 16" 
+     23.333 4.867 8 15z"/></svg>  <i>OPEN NEW</i> <svg width="1em" height="1em" viewBox="0 0 16 16" 
      class="bi bi-heart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" 
-     d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/></svg> <i>HAVE ADVICE</i></h2>
+     d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/></svg>  <i>ENJOY</i></h2>
     <link class="theme-link" rel="stylesheet" href="https://bootswatch.com/4/solar/bootstrap.min.css">    
     <link rel="stylesheet" href="css/index.css"> 
   </head>
@@ -51,9 +51,8 @@
      <div class="card bg-dark text-white">
              <img src="img/pngnaturecut.png" class="card-img" alt="pngnature">
         <div class="card-img-overlay">
-             <h1 class="card-title"><i><b>TRAVEL AGENCY "AMAZING TOUR"</b></i></h1>
-             <p class="card-text">
-             </p>
+             <h3 class="card-title"><i>travel agency</i></h3>
+             <h1 class="card-text"><b>"AMAZING TOUR"</b></h1>
              <h3 class="card-title"><svg width="1em" height="1em" viewBox="0 0 16 16" 
              class="bi bi-heart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
              <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 
